--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Homestead.json
 .phpunit.result.cache
 public/frontend/skinoasis/assets/prepros.config
 public/frontend/skinoasis/assets/sass/prepros.config
+composer.lock
